[package]
name = "wasm-key-manager"
description = "Holochain-compatible key management for Holo web users"
version = "1.0.0"
authors = ["yegortimoshenko@transumption.com", "matthew@webheroes.ca"]
edition = "2018"
repository = "https://github.com/Holo-Host/chaperone-key-manager"

[dependencies]
console_error_panic_hook = "0.1.6"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
failure = "0.1.6"
js-sys = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-cli = "0.2.78"
wee_alloc = "0.4.4"

[dependencies.argon2min]
git = "https://github.com/Holo-Host/argon2min"
branch = "2019-10-13-holo-config"

[lib]
crate-type = ["cdylib", "rlib"]
