[package]
name = "wasm-key-manager"
description = "Holochain-compatible key management for Holo web users"
version = "1.1.1"
authors = [ "joelulahanna@gmail.com", "yegortimoshenko@transumption.com", "matthew@webheroes.ca"]
edition = "2021"
repository = "https://github.com/Holo-Host/wasm-key-manager"

[dependencies]
console_error_panic_hook = "0.1.7"
ed25519-dalek = { version = "1" }
failure = "0.1.8"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-cli = "0.2.86"
wee_alloc = "0.4.5"

[dependencies.argon2min]
git = "https://github.com/Holo-Host/argon2min"
branch = "2019-10-13-holo-config"

[lib]
crate-type = ["cdylib", "rlib"]
